# amwall

./: .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  install.sh  linux-build.sh
.github/workflows/: release.yml
assets/: amwall.rc  simplewall-rs.rc
assets/icons/: README.md
examples/: install_demo.rs
linux/.cargo/: config.toml
locales/: he.toml
scripts/: build-msi.ps1
src/: gui.rs  hash.rs  install.rs  lib.rs  logging.rs  main.rs  profile.rs  rules.rs  skipuac.rs  wfp.rs
src/gui/: app.rs  app_icons.rs  app_properties.rs  apps_context_menu.rs  connect_dialog.rs  connections.rs  dialogs.rs  dns_resolve.rs  event_log.rs  font.rs  icons.rs  ids.rs  listview_groups.rs  main_window.rs  rule_editor.rs  services_enum.rs  settings.rs  settings_dialog.rs  toolbar.rs  tray.rs  update_check.rs  uwp_enum.rs
src/profile/: parse.rs  serialize.rs
src/rules/: compile.rs  parse.rs
src/wfp/: condition.rs  events.rs  filter.rs  provider.rs  sublayer.rs
tests/: end_to_end.rs  profile_parse.rs
wix/: Changelog.rtf  main.wxs
wix/lang/: ar-SA.wxl  az-Latn-AZ.wxl  be-BY.wxl  ca-ES.wxl  cs-CZ.wxl  da-DK.wxl  de-DE.wxl  el-GR.wxl  en-us.wxl  es-ES.wxl  et-EE.wxl  fa-IR.wxl  fi-FI.wxl  fr-FR.wxl  he-IL.wxl  hu-HU.wxl  hy-AM.wxl  id-ID.wxl  it-IT.wxl  ja-JP.wxl  ka-GE.wxl  kk-KZ.wxl  ko-KR.wxl  ky-KG.wxl  lt-LT.wxl  lv-LV.wxl  nl-NL.wxl  pl-PL.wxl  pt-BR.wxl  pt-PT.wxl  ro-RO.wxl  ru-RU.wxl  sk-SK.wxl  sl-SI.wxl  sr-Cyrl-RS.wxl  sr-Latn-RS.wxl  sv-SE.wxl  th-TH.wxl  tr-TR.wxl  uk-UA.wxl  (+3 more)
wix/scripts/: embed-transform.vbs  set-languages.vbs
(+13 files in other folders)
